<resources>
    <string name="app_name">SZUKumon</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">SZUKumon</string>
    <string name="nav_header_subtitle" translatable="false">Version: 1.8.0.0421</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_copy">Copy Link</string>
    <string name="action_refresh">Refresh</string>

    <string name="menu_kumon">Kumon</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About</string>
    <string name="menu_lobby">Lobby</string>
    <string name="menu_blackboard" translatable="false">BlackBoard</string>
    <string name="menu_lessons">Courses</string>
    <string name="menu_library">Library</string>
    <string name="menu_idcard">ID Card</string>
    <string name="menu_mailbox">School Mailbox</string>
    <string name="menu_outcampus">Out Campus Access</string>
    <string name="menu_epidemic">Epidemic PC Platform</string>

    <string name="menu_connect">Web Login</string>
    <string name="menu_schedule">Class Time</string>
    <string name="menu_wear">Wear Setting</string>

    <string name="kumon_education">Education</string>
    <string name="kumon_overhead">Overhead</string>
    <string name="kumon_lecture">Lecture</string>
    <string name="kumon_research">Research</string>
    <string name="kumon_students">Students</string>
    <string name="kumon_policy">Policy</string>
    <string name="kumon_campus">Campus</string>
    <string name="kumon_latest">Latest</string>

    <string name="default_open">Use Default Browser Open</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Card ID</string>
    <string name="prompt_password">Password</string>
    <string name="save_info">Remember Password</string>
    <string name="classroom_sign_in">Classroom Login</string>
    <string name="dormitory_sign_in">Dormitory Login</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="copy_hint">current URL copied</string>
    <string name="refresh_hint">Page refreshed</string>
</resources>