<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_kumon">

    <fragment
        android:id="@+id/nav_kumon"
        android:name="com.wjv.szukumon.access.home.HomeFragment"
        android:label="@string/menu_kumon"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_nav_home_to_educationFragment"
            app:destination="@id/educationFragment" />
        <action
            android:id="@+id/action_nav_home_to_researchFragment"
            app:destination="@id/researchFragment" />
        <action
            android:id="@+id/action_nav_home_to_campusFragment"
            app:destination="@id/campusFragment" />
        <action
            android:id="@+id/action_nav_home_to_studentsFragment"
            app:destination="@id/studentsFragment" />
        <action
            android:id="@+id/action_nav_home_to_overheadFragment"
            app:destination="@id/overheadFragment" />
        <action
            android:id="@+id/action_nav_home_to_lectureFragment"
            app:destination="@id/lectureFragment" />
        <action
            android:id="@+id/action_nav_home_to_policyFragment"
            app:destination="@id/policyFragment" />
        <action
            android:id="@+id/action_nav_home_to_latestFragment"
            app:destination="@id/latestFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.wjv.szukumon.others.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.wjv.szukumon.others.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/educationFragment"
        android:name="com.wjv.szukumon.access.kumon.EducationFragment"
        android:label="@string/kumon_education"
        tools:layout="@layout/fragment_education" >
        <action
            android:id="@+id/action_educationFragment_to_nav_home"
            app:destination="@id/nav_kumon" />
    </fragment>
    <fragment
        android:id="@+id/campusFragment"
        android:name="com.wjv.szukumon.access.kumon.CampusFragment"
        android:label="@string/kumon_campus"
        tools:layout="@layout/fragment_campus" >
        <action
            android:id="@+id/action_campusFragment_to_nav_home"
            app:destination="@id/nav_kumon" />
    </fragment>
    <fragment
        android:id="@+id/latestFragment"
        android:name="com.wjv.szukumon.access.kumon.LatestFragment"
        android:label="@string/kumon_latest"
        tools:layout="@layout/fragment_latest" >
        <action
            android:id="@+id/action_latestFragment_to_nav_home"
            app:destination="@id/nav_kumon" />
    </fragment>
    <fragment
        android:id="@+id/lectureFragment"
        android:name="com.wjv.szukumon.access.kumon.LectureFragment"
        android:label="@string/kumon_lecture"
        tools:layout="@layout/fragment_lecture" >
        <action
            android:id="@+id/action_lectureFragment_to_nav_home"
            app:destination="@id/nav_kumon" />
    </fragment>
    <fragment
        android:id="@+id/overheadFragment"
        android:name="com.wjv.szukumon.access.kumon.OverheadFragment"
        android:label="@string/kumon_overhead"
        tools:layout="@layout/fragment_overhead" >
        <action
            android:id="@+id/action_overheadFragment_to_nav_home"
            app:destination="@id/nav_kumon" />
    </fragment>
    <fragment
        android:id="@+id/policyFragment"
        android:name="com.wjv.szukumon.access.kumon.PolicyFragment"
        android:label="@string/kumon_policy"
        tools:layout="@layout/fragment_policy" >
        <action
            android:id="@+id/action_policyFragment_to_nav_home"
            app:destination="@id/nav_kumon" />
    </fragment>
    <fragment
        android:id="@+id/researchFragment"
        android:name="com.wjv.szukumon.access.kumon.ResearchFragment"
        android:label="@string/kumon_research"
        tools:layout="@layout/fragment_research" >
        <action
            android:id="@+id/action_researchFragment_to_nav_home"
            app:destination="@id/nav_kumon" />
    </fragment>
    <fragment
        android:id="@+id/studentsFragment"
        android:name="com.wjv.szukumon.access.kumon.StudentsFragment"
        android:label="@string/kumon_students"
        tools:layout="@layout/fragment_students" >
        <action
            android:id="@+id/action_studentsFragment_to_nav_home"
            app:destination="@id/nav_kumon" />
    </fragment>
    <fragment
        android:id="@+id/nav_lobby"
        android:name="com.wjv.szukumon.access.lobby.LobbyFragment"
        android:label="@string/menu_lobby"
        tools:layout="@layout/fragment_lobby" />

    <fragment
        android:id="@+id/nav_blackboard"
        android:name="com.wjv.szukumon.access.blackboard.BlackBoardFragment"
        android:label="@string/menu_blackboard"
        tools:layout="@layout/fragment_black_board" />
    <fragment
        android:id="@+id/nav_idcard"
        android:name="com.wjv.szukumon.access.idcard.IDCardFragment"
        android:label="@string/menu_idcard"
        tools:layout="@layout/fragment_idcard" />
    <fragment
        android:id="@+id/nav_lessons"
        android:name="com.wjv.szukumon.access.lessons.LessonsFragment"
        android:label="@string/menu_lessons"
        tools:layout="@layout/fragment_lessons" />
    <fragment
        android:id="@+id/nav_library"
        android:name="com.wjv.szukumon.access.library.LibraryFragment"
        android:label="@string/menu_library"
        tools:layout="@layout/fragment_library" />
    <fragment
        android:id="@+id/nav_connect"
        android:name="com.wjv.szukumon.tools.connect.LoginFragment"
        android:label="@string/menu_connect"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_outcampus"
        android:name="com.wjv.szukumon.access.outcampus.OutCampusFragment"
        android:label="@string/menu_outcampus"
        tools:layout="@layout/fragment_out_campus" />
    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.wjv.szukumon.tools.schedule.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule" />
    <fragment
        android:id="@+id/nav_wear"
        android:name="com.wjv.szukumon.tools.wear.WearFragment"
        android:label="@string/menu_wear"
        tools:layout="@layout/fragment_wear" />
    <fragment
        android:id="@+id/nav_mailbox"
        android:name="com.wjv.szukumon.access.mailbox.MailBoxFragment"
        android:label="@string/menu_mailbox"
        tools:layout="@layout/fragment_mail_box" />
    <fragment
        android:id="@+id/nav_epidemic"
        android:name="com.wjv.szukumon.access.epidemic.EpidemicFragment"
        android:label="@string/menu_epidemic"
        tools:layout="@layout/fragment_epidemic" />
</navigation>