<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:shrinkColumns="*"
        android:stretchColumns="*">


        <TableRow
            android:layout_gravity="center"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#F396B5"
                android:text="@string/kumon_latest" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#F396B5"
                android:text="@string/kumon_overhead" />

        </TableRow>

        <TableRow
            android:layout_gravity="center"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#F396B5"
                android:text="@string/kumon_education" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#F396B5"
                android:text="@string/kumon_lecture" />

        </TableRow>

        <TableRow
            android:layout_gravity="center"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button5"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#F396B5"
                android:text="@string/kumon_students" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button6"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#F396B5"
                android:text="@string/kumon_research" />

        </TableRow>

        <TableRow
            android:layout_gravity="center"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button7"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#F396B5"
                android:text="@string/kumon_policy" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button8"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#F396B5"
                android:text="@string/kumon_campus" />

        </TableRow>

    </TableLayout>
</FrameLayout>